update response structure for user_import
